# prediction-market-agent

./: .env.example  .gitignore  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
docs/: ROADMAP.md
eval/: .env.example  README.md  pyproject.toml
eval/data/: groundedness_examples.json
eval/lykos_eval/: __init__.py  agent_target.py  config.py  evaluators.py  examples.py  run_agent_eval.py  run_eval.py  seed_dataset.py
scratchpad/: agent-approval.mjs  agent-live.mjs  agent-news-forecast.mjs  agent-skeleton.mjs  fetch-markets.mjs  fetch-trades.mjs  forecast-bridge.mjs  forecast-smoke.mjs
